Implementation DEMO/ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ARRAY'", "'['", "','", "']'", "'LINKEDLIST'", 
                     "'STACK'", "'QUEUE'", "'='", "'PRINT'", "'SORT'", "'ASCENDING'", 
                     "'DESCENDING'", "'INSERT'", "'INTO'", "'DELETE'", "'FROM'", 
                     "'SEARCH'", "'IN'", "'AT'", "'PUSH'", "'POP'", "'ENQUEUE'", 
                     "'DEQUEUE'", "'IS'", "'FULL'", "'EMPTY'", "'PEEK'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INT", "FLOAT", "CHAR", "STRING", "WS", "NAME", "EOL", 
                      "BOOL", "COMMENT" ]

    RULE_program = 0
    RULE_codeBlock = 1
    RULE_statement = 2
    RULE_arrayDefinition = 3
    RULE_linkedListDefinition = 4
    RULE_stackDefinition = 5
    RULE_queueDefinition = 6
    RULE_variableAssignment = 7
    RULE_arrayStatement = 8
    RULE_linkedListStatement = 9
    RULE_stackStatement = 10
    RULE_queueStatement = 11
    RULE_printStatement = 12
    RULE_sortArray = 13
    RULE_insert = 14
    RULE_delete = 15
    RULE_search = 16
    RULE_insertAt = 17
    RULE_pushStack = 18
    RULE_popStack = 19
    RULE_enqueueQueue = 20
    RULE_dequeueQueue = 21
    RULE_isFull = 22
    RULE_isEmpty = 23
    RULE_peek = 24
    RULE_var = 25

    ruleNames =  [ "program", "codeBlock", "statement", "arrayDefinition", 
                   "linkedListDefinition", "stackDefinition", "queueDefinition", 
                   "variableAssignment", "arrayStatement", "linkedListStatement", 
                   "stackStatement", "queueStatement", "printStatement", 
                   "sortArray", "insert", "delete", "search", "insertAt", 
                   "pushStack", "popStack", "enqueueQueue", "dequeueQueue", 
                   "isFull", "isEmpty", "peek", "var" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    INT=28
    FLOAT=29
    CHAR=30
    STRING=31
    WS=32
    NAME=33
    EOL=34
    BOOL=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def codeBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.CodeBlockContext)
            else:
                return self.getTypedRuleContext(ExprParser.CodeBlockContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.codeBlock()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

            self.state = 57
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableAssignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.VariableAssignmentContext)
            else:
                return self.getTypedRuleContext(ExprParser.VariableAssignmentContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatementContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_codeBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeBlock" ):
                listener.enterCodeBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeBlock" ):
                listener.exitCodeBlock(self)




    def codeBlock(self):

        localctx = ExprParser.CodeBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_codeBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 59
                    self.variableAssignment()

                else:
                    raise NoViableAltException(self)
                self.state = 62 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.statement() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayStatement(self):
            return self.getTypedRuleContext(ExprParser.ArrayStatementContext,0)


        def linkedListStatement(self):
            return self.getTypedRuleContext(ExprParser.LinkedListStatementContext,0)


        def stackStatement(self):
            return self.getTypedRuleContext(ExprParser.StackStatementContext,0)


        def queueStatement(self):
            return self.getTypedRuleContext(ExprParser.QueueStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(ExprParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = ExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.arrayStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.linkedListStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.stackStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.queueStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.printStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.VarContext)
            else:
                return self.getTypedRuleContext(ExprParser.VarContext,i)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NAME)
            else:
                return self.getToken(ExprParser.NAME, i)

        def getRuleIndex(self):
            return ExprParser.RULE_arrayDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDefinition" ):
                listener.enterArrayDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDefinition" ):
                listener.exitArrayDefinition(self)




    def arrayDefinition(self):

        localctx = ExprParser.ArrayDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrayDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ExprParser.T__0)
            self.state = 78
            self.match(ExprParser.T__1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 46976204800) != 0):
                self.state = 81
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [28, 29, 30, 31, 35]:
                    self.state = 79
                    self.var()
                    pass
                elif token in [33]:
                    self.state = 80
                    self.match(ExprParser.NAME)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 86
                self.match(ExprParser.T__2)
                self.state = 89
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [28, 29, 30, 31, 35]:
                    self.state = 87
                    self.var()
                    pass
                elif token in [33]:
                    self.state = 88
                    self.match(ExprParser.NAME)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkedListDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_linkedListDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkedListDefinition" ):
                listener.enterLinkedListDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkedListDefinition" ):
                listener.exitLinkedListDefinition(self)




    def linkedListDefinition(self):

        localctx = ExprParser.LinkedListDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_linkedListDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ExprParser.T__4)
            self.state = 99
            self.match(ExprParser.T__1)
            self.state = 100
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StackDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def NAME(self):
            return self.getToken(ExprParser.NAME, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_stackDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStackDefinition" ):
                listener.enterStackDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStackDefinition" ):
                listener.exitStackDefinition(self)




    def stackDefinition(self):

        localctx = ExprParser.StackDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stackDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ExprParser.T__5)
            self.state = 103
            self.match(ExprParser.T__1)
            self.state = 104
            _la = self._input.LA(1)
            if not(_la==28 or _la==33):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueueDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def NAME(self):
            return self.getToken(ExprParser.NAME, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_queueDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueueDefinition" ):
                listener.enterQueueDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueueDefinition" ):
                listener.exitQueueDefinition(self)




    def queueDefinition(self):

        localctx = ExprParser.QueueDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_queueDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(ExprParser.T__6)
            self.state = 108
            self.match(ExprParser.T__1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==28 or _la==33):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 110
            self.match(ExprParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.NAME)
            else:
                return self.getToken(ExprParser.NAME, i)

        def arrayDefinition(self):
            return self.getTypedRuleContext(ExprParser.ArrayDefinitionContext,0)


        def EOL(self):
            return self.getToken(ExprParser.EOL, 0)

        def linkedListDefinition(self):
            return self.getTypedRuleContext(ExprParser.LinkedListDefinitionContext,0)


        def stackDefinition(self):
            return self.getTypedRuleContext(ExprParser.StackDefinitionContext,0)


        def queueDefinition(self):
            return self.getTypedRuleContext(ExprParser.QueueDefinitionContext,0)


        def search(self):
            return self.getTypedRuleContext(ExprParser.SearchContext,0)


        def popStack(self):
            return self.getTypedRuleContext(ExprParser.PopStackContext,0)


        def dequeueQueue(self):
            return self.getTypedRuleContext(ExprParser.DequeueQueueContext,0)


        def peek(self):
            return self.getTypedRuleContext(ExprParser.PeekContext,0)


        def isFull(self):
            return self.getTypedRuleContext(ExprParser.IsFullContext,0)


        def isEmpty(self):
            return self.getTypedRuleContext(ExprParser.IsEmptyContext,0)


        def var(self):
            return self.getTypedRuleContext(ExprParser.VarContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_variableAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableAssignment" ):
                listener.enterVariableAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableAssignment" ):
                listener.exitVariableAssignment(self)




    def variableAssignment(self):

        localctx = ExprParser.VariableAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableAssignment)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(ExprParser.NAME)
                self.state = 113
                self.match(ExprParser.T__7)
                self.state = 114
                self.arrayDefinition()
                self.state = 115
                self.match(ExprParser.EOL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(ExprParser.NAME)
                self.state = 118
                self.match(ExprParser.T__7)
                self.state = 119
                self.linkedListDefinition()
                self.state = 120
                self.match(ExprParser.EOL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.match(ExprParser.NAME)
                self.state = 123
                self.match(ExprParser.T__7)
                self.state = 124
                self.stackDefinition()
                self.state = 125
                self.match(ExprParser.EOL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.match(ExprParser.NAME)
                self.state = 128
                self.match(ExprParser.T__7)
                self.state = 129
                self.queueDefinition()
                self.state = 130
                self.match(ExprParser.EOL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.match(ExprParser.NAME)
                self.state = 133
                self.match(ExprParser.T__7)
                self.state = 134
                self.search()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.match(ExprParser.NAME)
                self.state = 136
                self.match(ExprParser.T__7)
                self.state = 137
                self.popStack()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 138
                self.match(ExprParser.NAME)
                self.state = 139
                self.match(ExprParser.T__7)
                self.state = 140
                self.dequeueQueue()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.match(ExprParser.NAME)
                self.state = 142
                self.match(ExprParser.T__7)
                self.state = 143
                self.peek()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 144
                self.match(ExprParser.NAME)
                self.state = 145
                self.match(ExprParser.T__7)
                self.state = 146
                self.isFull()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 147
                self.match(ExprParser.NAME)
                self.state = 148
                self.match(ExprParser.T__7)
                self.state = 149
                self.isEmpty()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 150
                self.match(ExprParser.NAME)
                self.state = 151
                self.match(ExprParser.T__7)
                self.state = 152
                self.var()
                self.state = 153
                self.match(ExprParser.EOL)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 155
                self.match(ExprParser.NAME)
                self.state = 156
                self.match(ExprParser.T__7)
                self.state = 157
                self.match(ExprParser.NAME)
                self.state = 158
                self.match(ExprParser.EOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def insert(self):
            return self.getTypedRuleContext(ExprParser.InsertContext,0)


        def insertAt(self):
            return self.getTypedRuleContext(ExprParser.InsertAtContext,0)


        def delete(self):
            return self.getTypedRuleContext(ExprParser.DeleteContext,0)


        def search(self):
            return self.getTypedRuleContext(ExprParser.SearchContext,0)


        def sortArray(self):
            return self.getTypedRuleContext(ExprParser.SortArrayContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_arrayStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayStatement" ):
                listener.enterArrayStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayStatement" ):
                listener.exitArrayStatement(self)




    def arrayStatement(self):

        localctx = ExprParser.ArrayStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayStatement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.insert()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.insertAt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.delete()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.search()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.sortArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkedListStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def insert(self):
            return self.getTypedRuleContext(ExprParser.InsertContext,0)


        def delete(self):
            return self.getTypedRuleContext(ExprParser.DeleteContext,0)


        def search(self):
            return self.getTypedRuleContext(ExprParser.SearchContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_linkedListStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinkedListStatement" ):
                listener.enterLinkedListStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinkedListStatement" ):
                listener.exitLinkedListStatement(self)




    def linkedListStatement(self):

        localctx = ExprParser.LinkedListStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_linkedListStatement)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.insert()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.delete()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.search()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StackStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pushStack(self):
            return self.getTypedRuleContext(ExprParser.PushStackContext,0)


        def popStack(self):
            return self.getTypedRuleContext(ExprParser.PopStackContext,0)


        def peek(self):
            return self.getTypedRuleContext(ExprParser.PeekContext,0)


        def isFull(self):
            return self.getTypedRuleContext(ExprParser.IsFullContext,0)


        def isEmpty(self):
            return self.getTypedRuleContext(ExprParser.IsEmptyContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_stackStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStackStatement" ):
                listener.enterStackStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStackStatement" ):
                listener.exitStackStatement(self)




    def stackStatement(self):

        localctx = ExprParser.StackStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stackStatement)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.pushStack()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.popStack()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.peek()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.isFull()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 177
                self.isEmpty()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueueStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enqueueQueue(self):
            return self.getTypedRuleContext(ExprParser.EnqueueQueueContext,0)


        def dequeueQueue(self):
            return self.getTypedRuleContext(ExprParser.DequeueQueueContext,0)


        def peek(self):
            return self.getTypedRuleContext(ExprParser.PeekContext,0)


        def isFull(self):
            return self.getTypedRuleContext(ExprParser.IsFullContext,0)


        def isEmpty(self):
            return self.getTypedRuleContext(ExprParser.IsEmptyContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_queueStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueueStatement" ):
                listener.enterQueueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueueStatement" ):
                listener.exitQueueStatement(self)




    def queueStatement(self):

        localctx = ExprParser.QueueStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_queueStatement)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.enqueueQueue()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.dequeueQueue()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.peek()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 183
                self.isFull()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 184
                self.isEmpty()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(ExprParser.NAME, 0)

        def EOL(self):
            return self.getToken(ExprParser.EOL, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):
